feat: add refresh token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.flyway.url=jdbc:mysql://localhost:3306?allowPublicKeyRetrieval=true&useSS
 spring.flyway.schemas=testdb
 jwt.secret=1439fe7a-468e-479a-a0ac-ad9d18ec9716
 jwt.expiration=1h
+jwt.refresh_expiration=1d
+spring.flyway.enabled=true
